Adding integration tests - more

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,4 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.hibernate.ddl-auto=update
 
-
-external.api.client.regres: https://reqres.in/api/users/
+external.api.client.regres: https://reqres.in/api/users
